--- a/index.html
+++ b/index.html
@@ -9,12 +9,12 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Rowdies&display=swap" rel="stylesheet">
     <link rel = "icon" type = "image/png" href = "Logo.png">
-    <title>IMB Calculator</title>
+    <title>BMI Calculator</title>
 </head>
 <body>
     <div id="squadrato">
         <div id="tabella">
-            <p class="title">Calcolatore IMB <a title="Canale YouTube" href="https://www.youtube.com/c/RMChannel0473"><img src='Logo.png'></a></p>
+            <p class="title">Calcolatore BMI <a title="Canale YouTube" href="https://www.youtube.com/c/RMChannel0473"><img src='Logo.png'></a></p>
             <p class="desc">Altezza: <input type="text" id="altezza">m</p>
             <p class="desc">Inserisci i dati dell'altezza in Metri e usare il punto come virgola!</p>
             <p class="desc">Peso: <input type="text" id="peso">kg</p>
